# zk-attestation-for-ai-generated-contents

./: .gitignore  README.md
program/: Cargo.toml
program/src/: main.rs
script/: .gitignore  Cargo.toml
script/src/: main.rs
