[package]
name = "zk-attestation-for-ai-generated-contents-script"
# version = { workspace = true }
edition = "2021"
# edition = { workspace = true }
publish = false
default-run = "zk-attestation-for-ai-generated-contents-script"

[dependencies]
sp1-zkvm = "4.0.0"
sp1-sdk = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "4.0.0"
